@@ -8,41 +8,20 @@ import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.stream.Collectors;
-
 import static java.util.Collections.emptyList;
 
-public class Bookstore {
-
-
+public class Bookstore{
     static Scanner scanner = new Scanner(System.in);
     final String filePath = "src/main/resources/books.txt";
     final String INV = "Invalid input";
-
-    public boolean isValidInput09(String input) {
-        return input.matches("[0-9]+");
-    }
-
-    public boolean isValidInputAZ(String input) {
-        return input.matches("^[A-Za-z ]+$");
-    }
-
-    public void writeLetters() {
-        System.out.println("Invalid input! Please enter letters only");
-    }
-
-    public void writeNumbers() {
-        System.out.println("Invalid input! Please enter numbers only");
-    }
-
-
     private List<Book> books;
-
-    public Bookstore() {
+    public Bookstore(){
         try {
             Path path = Paths.get(filePath);
             books = Files.lines(path)
                     .map(line -> {
-                        List<String> fields = Arrays.stream(line.split(";")).collect(Collectors.toList());
+                        //List<String> fields = Arrays.stream(line.split(";")).collect(Collectors.toList());
+                        List<String> fields = Arrays.stream(line.split(";")).toList();
                         return new Book(
                                 fields.get(0),
                                 fields.get(1),
@@ -54,42 +33,57 @@ public class Bookstore {
                         );
                     })
                     .collect(Collectors.toList());
-
+            //books.forEach(System.out::println);
         } catch (Exception e) {
             e.printStackTrace();
         }
     }
 
-
-    public List<Book> searchBook(String query, int action) {
+    //Search book
+    public List<Book> searchBook(String query, String action) {
         switch (action) {
-            case 0 -> {
-                return books;
-            }
-            case 1 -> {
-                if (query.equals(INV)) {
-                    System.out.println(INV);
-                    return Collections.emptyList();
-                } else {
-                    return books.stream().filter(e -> e.getIsbn().equals(query)).collect(Collectors.toList());
-                }
-            }
-            case 2 -> {
-                return books.stream().filter(e -> e.getTitle().equalsIgnoreCase(query)).collect(Collectors.toList());
-            }
+            case "searchAllBooks" -> { return books; }
+            case "searchByIsbn" -> { if (query.equals(INV)) {
+                System.out.println(INV);
+                return Collections.emptyList();
+            } else { return books.stream().filter(e->e.getIsbn().equals(query))
+                    .collect(Collectors.toList());} }
+            case "searchByTitle" -> { return books.stream().filter(e->e.getTitle().equalsIgnoreCase(query))
+                    .collect(Collectors.toList()); }
         }
         return Collections.emptyList();
     }
 
-    public String inputBookTitle() {
-        System.out.println("Enter book Title:");
+    public String inputAll(){
         return scanner.nextLine();
     }
 
-    public String inputBookIsbn() {
-        System.out.println("Enter book Isbn:");
-        String myIsbn = scanner.nextLine();
-        return isValidInput09(myIsbn) ? myIsbn : INV;
+
+
+    public String inputNumber(){
+        String myInput = INV;
+        while (myInput.equals(INV))
+        {
+            myInput = scanner.nextLine();
+            if (!isValidInput09(myInput)) {
+                System.out.println(INV + ". Enter only numbers!");
+                myInput = INV;
+            } else break;
+        }
+        return myInput;
+    }
+
+    public String inputLetters(){
+        String myInput = INV;
+        while (myInput.equals(INV))
+        {
+            myInput = scanner.nextLine();
+            if (!isValidInputAZ(myInput)) {
+                System.out.println(INV + ". Enter only letters!");
+                myInput = INV;
+            } else break;
+        }
+        return myInput;
     }
 
     // Add new book
@@ -98,61 +92,33 @@ public class Bookstore {
         Book newBook = new Book();
         System.out.println("Add book");
 
-        //Input book ISBN
-        String myInput = INV;
-        while (myInput.equals(INV)) {
-            myInput = inputBookIsbn();
-            if (myInput.equals(INV)) System.out.println(INV);
-            else newBook.setIsbn(myInput);
-        }
+        System.out.println("Enter book Isbn:");
+        newBook.setIsbn(inputNumber());
 
-        newBook.setTitle(inputBookTitle());
+        System.out.println("Enter book Title:");
+        newBook.setTitle(inputAll());
 
         System.out.println("Enter Description:");
-        newBook.setDescription(scanner.nextLine());
+        newBook.setDescription(inputAll());
 
-        //enter author loop
-        while (true) {
-            System.out.println("Enter Author:");
-            myInput = scanner.nextLine();
-            if (isValidInputAZ(myInput)) {
-                newBook.setAuthor(myInput);
-                break;
-            } else {
-                writeLetters();
-            }
-        }
+        System.out.println("Enter Author:");
+        newBook.setAuthor(inputLetters());
 
         System.out.println("Enter Publisher:");
-        newBook.setPublisher(scanner.nextLine());
+        newBook.setPublisher(inputAll());
 
-        //enter number of pages loop
-        while (true) {
-            System.out.println("Enter number of pages:");
-            myInput = scanner.nextLine();
+        System.out.println("Enter number of pages:");
+        newBook.setPages(Integer.parseInt(inputNumber()));
 
-            if (isValidInput09(myInput)) {
-                newBook.setPages(Integer.parseInt(myInput));
-                break;
-            } else {
-                writeNumbers();
-            }
-        }
+        System.out.println("Enter publishing year:");
+        newBook.setPublishingYear(LocalDate.of(Integer.parseInt(inputNumber()), 1, 1));
 
-        // Enter publishing year loop
-        while (true) {
-            System.out.println("Enter publishing year:");
-            myInput = scanner.nextLine();
-            if (isValidInput09(myInput) && (Calendar.getInstance().get(Calendar.YEAR)) - Integer.parseInt(myInput) >= 0) {
-                newBook.setPublishingYear(LocalDate.of(Integer.parseInt(myInput), 1, 1));
-                break;
-            } else {
-                writeNumbers();
-            }
-        }
+        //if (isValidInput09(myInput) && (Calendar.getInstance().get(Calendar.YEAR))-Integer.parseInt(myInput)>=0) newBook.setPublishingYear(LocalDate.of(Integer.parseInt(myInput), 1, 1));
+        //else {System.out.println(INV); return null;}
 
         return newBook;
     }
+
 
     // Add new book
     public void addBook(Book book) {
@@ -166,19 +132,19 @@ public class Bookstore {
         System.out.println("Book removed");
     }
 
-    public void printData(String msg, List<Book> books) {
+    public void printData(String msg, List<Book> books){
         System.out.println(msg);
-        if ((long) books.size() != 0) books.forEach(book -> System.out.println(book.toString()));
+        if ((long) books.size() !=0) books.forEach(book -> System.out.println(book.toString()));
         else System.out.println("Book(s) not found");
     }
 
     //Save data
-    public void saveData() {
-        try (BufferedWriter out = new BufferedWriter(new FileWriter(filePath))) {
-            for (Book book : books) out.write(book.toCSV());
+    public void saveData(){
+        try(BufferedWriter out = new BufferedWriter(new FileWriter(filePath))){
+            for (Book book: books) out.write(book.toCSV());
             out.close();
             System.out.println("Data saved successfully");
-        } catch (IOException e) {
+        }catch (IOException e) {
             e.printStackTrace();
         }
     }
@@ -193,6 +159,14 @@ public class Bookstore {
                 5. List Available Books
                 6. Save data to local file
                 Press Q to quit\s""");
+    }
+
+    public boolean isValidInput09(String input){
+        return input.matches("[0-9]+");
+    }
+
+    public boolean isValidInputAZ(String input){
+        return input.matches("^[A-Za-z ]+$");
     }
 
 }
